--- a/app/src/main/res/layout/activity_post_inside092.xml
+++ b/app/src/main/res/layout/activity_post_inside092.xml
@@ -60,7 +60,7 @@
                 android:orientation="vertical"
                 android:paddingLeft="20dp">
                 <TextView
-                    android:id="@+id/nickname_09"
+                    android:id="@+id/nickname_09_2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="#3C567B"
@@ -68,7 +68,7 @@
                     android:textSize="17dp"
                     android:text="고양이 사랑"/>
                 <TextView
-                    android:id="@+id/timestamp_09"
+                    android:id="@+id/timestamp_09_2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="2023.10.24 17:52"
@@ -111,14 +111,14 @@
                 android:orientation="vertical"
                 android:paddingLeft="20dp">
                 <TextView
-                    android:id="@+id/itemName_09"
+                    android:id="@+id/itemName_09_2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="#3C567B"
                     android:textStyle="bold"
                     android:text="제품명 : 깨끗한나라 물티슈 70매 x 10개"/>
                 <TextView
-                    android:id="@+id/price_09"
+                    android:id="@+id/price_09_2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="#3C567B"
@@ -143,7 +143,7 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/title_09"
+                    android:id="@+id/title_09_2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:paddingBottom="13dp"
@@ -153,7 +153,7 @@
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/text_09"
+                    android:id="@+id/text_09_2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:paddingBottom="13dp"
@@ -178,7 +178,7 @@
                             android:src="@drawable/heart" />
 
                         <TextView
-                            android:id="@+id/heartCount_09"
+                            android:id="@+id/heartCount_09_2"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:paddingLeft="10dp"
