--- a/app/src/main/res/layout/activity_post_inside_jachitem.xml
+++ b/app/src/main/res/layout/activity_post_inside_jachitem.xml
@@ -122,13 +122,14 @@
                     android:orientation="horizontal">
 
                     <LinearLayout
+                        android:gravity="center"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal">
 
                         <ImageView
-                            android:layout_width="20dp"
-                            android:layout_height="20dp"
+                            android:layout_width="15dp"
+                            android:layout_height="15dp"
                             android:src="@drawable/heartcount" />
 
                         <TextView
@@ -147,11 +148,13 @@
                         android:orientation="horizontal">
 
                         <ImageView
+                            android:id="@+id/heart_jachi_post"
                             android:layout_width="20dp"
                             android:layout_height="20dp"
                             android:src="@drawable/heartcount" />
 
                         <ImageView
+                            android:id="@+id/star_jachi_post"
                             android:layout_width="20dp"
                             android:layout_height="20dp"
                             android:layout_marginLeft="10dp"
