--- a/app/src/main/res/layout/activity_find_password.xml
+++ b/app/src/main/res/layout/activity_find_password.xml
@@ -38,13 +38,15 @@
             android:textSize="20dp"
             android:textStyle="bold"
             android:textColor="#3c567b"/>
+
         <EditText
-            android:layout_marginTop="5dp"
+            android:id="@+id/name_edit_txt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
             android:background="@drawable/id_password_edit"
             android:hint="이름 입력"
-            android:textColorHint="#6983A9"/>
+            android:textColorHint="#6983A9" />
         <TextView
             android:layout_marginTop="10dp"
             android:layout_width="match_parent"
@@ -54,6 +56,7 @@
             android:textStyle="bold"
             android:textColor="#3c567b"/>
         <EditText
+            android:id="@+id/email_edit_txt"
             android:layout_marginTop="5dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -69,6 +72,7 @@
             android:textStyle="bold"
             android:textColor="#3c567b"/>
         <EditText
+            android:id="@+id/phone_edit_txt"
             android:layout_marginTop="5dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -82,10 +86,11 @@
 
 
     <Button
+        android:id="@+id/passwordFind_btn"
     android:layout_width="300dp"
     android:layout_centerHorizontal="true"
     android:layout_height="wrap_content"
-    android:text="회원가입 완료"
+    android:text="비밀번호 찾기"
     android:textSize="20sp"
     android:textColor="@color/white"
     android:textStyle="bold"
