검색 기능 완.

--- a/app/src/main/res/layout/fragment_community3.xml
+++ b/app/src/main/res/layout/fragment_community3.xml
@@ -31,15 +31,29 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
+        <LinearLayout
+            android:id="@+id/linearLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+
             <EditText
-                android:layout_marginStart="20dp"
-                android:layout_marginEnd="20dp"
+                android:id="@+id/searchText"
                 android:layout_width="match_parent"
+                android:layout_weight="1"
                 android:layout_height="wrap_content"
-                android:inputType="text"
-                android:maxLines="1"
-                android:backgroundTint="#3c567b"
-                android:drawableLeft="@drawable/search"/>
+                android:inputType="text" />
+
+            <ImageButton
+                android:layout_marginLeft="20dp"
+                android:id="@+id/searchBtn_recipe"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/search"
+                android:background="@drawable/blue"
+                />
+        </LinearLayout>
             <LinearLayout
                 android:layout_marginBottom="20dp"
                 android:layout_marginTop="10dp"
