--- a/app/src/main/res/layout/fragment_home1.xml
+++ b/app/src/main/res/layout/fragment_home1.xml
@@ -30,15 +30,30 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <EditText
-                android:layout_marginStart="20dp"
-                android:layout_marginEnd="20dp"
+            <LinearLayout
+                android:id="@+id/linearLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="text"
-                android:maxLines="1"
-                android:backgroundTint="#3c567b"
-                android:drawableLeft="@drawable/search"/>
+                android:orientation="horizontal">
+
+
+                <EditText
+                    android:id="@+id/searchText_home1"
+                    android:layout_width="match_parent"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:inputType="text" />
+
+                <ImageButton
+                    android:layout_marginLeft="20dp"
+                    android:id="@+id/searchBtn_home1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/search"
+                    android:background="@drawable/blue"
+                    />
+            </LinearLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
