--- a/app/src/main/res/layout/activity_post_inside09.xml
+++ b/app/src/main/res/layout/activity_post_inside09.xml
@@ -46,6 +46,7 @@
                 android:layout_height="60dp">
 
                 <ImageView
+                    android:id="@+id/user_img_09_post"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:scaleType="centerInside"
@@ -160,6 +161,10 @@
                     android:text="집이 너무 지저분해서 물티슈가 필요한데 인간적으로 10개는 너무 많은 것 같아서 공구합니다....ㅠ"
                     android:textColor="#687F9F"
                     android:textStyle="bold" />
+                <ImageView
+                    android:id="@+id/downloaded_imageview"
+                    android:layout_width="wrap_content"
+                    android:layout_height="90dp" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -167,15 +172,16 @@
                     android:orientation="horizontal">
 
                     <LinearLayout
+                        android:gravity="center"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal">
 
                         <ImageView
-                            android:id="@+id/post_09_heart"
-                            android:layout_width="20dp"
-                            android:layout_height="20dp"
-                            android:src="@drawable/heart" />
+                            android:layout_width="15dp"
+                            android:layout_height="15dp"
+                            android:src="@drawable/heartcount" />
+
 
                         <TextView
                             android:id="@+id/heartCount_09"
@@ -187,23 +193,23 @@
                     </LinearLayout>
 
                     <LinearLayout
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_gravity=""
-                        android:layout_marginLeft="220dp"
-                        android:gravity="left"
+                        android:gravity="right"
                         android:orientation="horizontal">
 
                         <ImageView
+                            android:id="@+id/heart_09_post"
                             android:layout_width="20dp"
                             android:layout_height="20dp"
                             android:src="@drawable/heart" />
 
                         <ImageView
+                            android:id="@+id/star_09_post"
                             android:layout_width="20dp"
                             android:layout_height="20dp"
                             android:layout_marginLeft="10dp"
-                            android:src="@drawable/star" />
+                            android:src="@drawable/star_blank" />
                     </LinearLayout>
                 </LinearLayout>
             </LinearLayout>
