--- a/app/src/main/res/layout/activity_post_inside_playing.xml
+++ b/app/src/main/res/layout/activity_post_inside_playing.xml
@@ -46,6 +46,7 @@
                 android:layout_height="60dp">
 
                 <ImageView
+                    android:id="@+id/user_img_leisure_post"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:scaleType="centerInside"
@@ -150,6 +151,10 @@
                     android:text="날씨가 시원해져서 놀이공원이 가고싶은데... 같이 가실 분 있으신가요ㅎㅎ 아무나 환영입니다!!"
                     android:textColor="#687F9F"
                     android:textStyle="bold" />
+                <ImageView
+                    android:id="@+id/downloaded_imageview"
+                    android:layout_width="wrap_content"
+                    android:layout_height="90dp" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -157,13 +162,14 @@
                     android:orientation="horizontal">
 
                     <LinearLayout
+                        android:gravity="center"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal">
 
                         <ImageView
-                            android:layout_width="20dp"
-                            android:layout_height="20dp"
+                            android:layout_width="15dp"
+                            android:layout_height="15dp"
                             android:src="@drawable/heartcount" />
 
                         <TextView
@@ -182,11 +188,13 @@
                         android:orientation="horizontal">
 
                         <ImageView
+                            android:id="@+id/heart_leisure_post"
                             android:layout_width="20dp"
-                            android:layout_height="20dp"
+                            android:layout_height="match_parent"
                             android:src="@drawable/heart" />
 
                         <ImageView
+                            android:id="@+id/star_leisure_post"
                             android:layout_width="20dp"
                             android:layout_height="20dp"
                             android:layout_marginLeft="10dp"
