--- a/app/src/main/res/layout/activity_post_inside_recipe.xml
+++ b/app/src/main/res/layout/activity_post_inside_recipe.xml
@@ -46,6 +46,7 @@
                 android:layout_height="60dp">
 
                 <ImageView
+                    android:id="@+id/user_img_recipe_post"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:scaleType="centerInside"
