--- a/app/src/main/res/layout/activity_post_inside_playing.xml
+++ b/app/src/main/res/layout/activity_post_inside_playing.xml
@@ -204,6 +204,7 @@
             </LinearLayout>
         </LinearLayout>
         <Button
+            android:id="@+id/join_leisure_post"
             android:layout_gravity="right"
             android:layout_marginTop="13dp"
             android:layout_width="100dp"
