--- a/app/src/main/res/layout/activity_mypage_mywrite.xml
+++ b/app/src/main/res/layout/activity_mypage_mywrite.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:padding="20dp"
     android:layout_height="match_parent"
     android:orientation="vertical">
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="20dp">
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        >
         <ImageView
             android:id="@+id/backBtn"
             android:layout_width="38dp"
@@ -36,6 +38,11 @@
         </LinearLayout>
 
     </RelativeLayout>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/mypage_myWrite_recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
 
 
 </LinearLayout>
