--- a/app/src/main/res/layout/activity_community_writing.xml
+++ b/app/src/main/res/layout/activity_community_writing.xml
@@ -58,25 +58,31 @@
                     android:textColor="#3c567b"
                     android:textStyle="bold" />
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="end|center">
 
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/arrow_down" />
 
-                    <TextView
-                        android:layout_width="wrap_content"
+                    <LinearLayout
+                        android:gravity="right"
+
+                        android:orientation="horizontal"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="10dp"
-                        android:layout_marginEnd="20dp"
-                        android:text="전체 지역"
-                        android:textColor="#3c567b"
-                        android:textStyle="bold" />
-                </LinearLayout>
+                        android:weightSum="1">
+                        <Spinner
+                            android:layout_width="100dp"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/spinner"
+                            android:layout_weight="0.2"
+                            />
+                        <Spinner
+                            android:layout_width="100dp"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/spinner2"
+                            android:layout_weight="0.2"
+                            />
+                    </LinearLayout>
+
+
+
 
 
             </LinearLayout>
