--- a/app/src/main/res/layout/fragment_home1.xml
+++ b/app/src/main/res/layout/fragment_home1.xml
@@ -55,24 +55,26 @@
             </LinearLayout>
 
             <LinearLayout
+                android:gravity="right"
+
+                android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:gravity="right">
-                <ImageView
-                    android:layout_width="wrap_content"
+                android:weightSum="1">
+                <Spinner
+                    android:layout_width="100dp"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/arrow_down" />
-
-                <TextView
-                    android:layout_marginStart="10dp"
-                    android:layout_marginEnd="20dp"
-                    android:layout_width="wrap_content"
+                    android:id="@+id/spinner_gonggu_show"
+                    android:layout_weight="0.2"
+                    />
+                <Spinner
+                    android:layout_width="100dp"
                     android:layout_height="wrap_content"
-                    android:text="전체 지역"
-                    android:textStyle="bold"
-                    android:textColor="#3c567b"/>
+                    android:id="@+id/spinner2_gonggu_show"
+                    android:layout_weight="0.2"
+                    />
             </LinearLayout>
+
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/home1_recyclerView"
                 android:layout_width="match_parent"
