--- a/app/src/main/res/layout/activity_post_inside_playing.xml
+++ b/app/src/main/res/layout/activity_post_inside_playing.xml
@@ -76,11 +76,12 @@
                     android:textSize="13dp"/>
             </LinearLayout>
             <Button
+                android:id="@+id/people_count_leisure"
+                android:layout_alignParentEnd="true"
                 android:layout_alignBottom="@id/post_userText"
                 android:background="@drawable/button_round"
                 android:backgroundTint="#DFE9EB"
-                android:layout_toRightOf="@id/post_userText"
-                android:layout_width="wrap_content"
+                android:layout_width="100dp"
                 android:layout_height="30dp"
                 android:drawableLeft="@drawable/people"
 
@@ -207,7 +208,7 @@
             android:id="@+id/join_leisure_post"
             android:layout_gravity="right"
             android:layout_marginTop="13dp"
-            android:layout_width="100dp"
+            android:layout_width="wrap_content"
             android:layout_height="35dp"
             android:text="참여하기"
             android:textStyle="bold"
